[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/HUD/Coins.png" type="Texture" id=1]
[ext_resource path="res://src/HUD/HUDPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/HUD/Heart.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Xolonium-Regular-number.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 7
font_data = ExtResource( 4 )

[node name="HUDPlayer" type="Node2D"]
script = ExtResource( 2 )

[node name="HPBar" type="ProgressBar" parent="."]
self_modulate = Color( 0.513726, 0.976471, 0.305882, 0.658824 )
margin_right = 13.0
margin_bottom = 3.0
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsBar" type="ProgressBar" parent="."]
self_modulate = Color( 0.866667, 0.772549, 0.0156863, 0.611765 )
margin_left = 0.230236
margin_top = 2.94335
margin_right = 13.2302
margin_bottom = 5.94335
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="."]
margin_left = 13.4719
margin_top = -0.766899
margin_right = 51.4719
margin_bottom = 13.2331
custom_fonts/font = SubResource( 1 )
text = "+3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsSprit" type="Sprite" parent="CoinsLabel"]
position = Vector2( 12.8449, 4.44026 )
scale = Vector2( 0.178163, 0.187751 )
texture = ExtResource( 1 )

[node name="HpLabel" type="Label" parent="."]
margin_left = 0.288002
margin_top = -11.4078
margin_right = 38.288
margin_bottom = 2.59219
custom_fonts/font = SubResource( 2 )
text = "+1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpSprit" type="Sprite" parent="HpLabel"]
position = Vector2( 11.848, 5.02461 )
scale = Vector2( 0.131926, 0.139526 )
texture = ExtResource( 3 )

[node name="CoinsTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HpTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="CoinsTimer" to="." method="_on_CoinsTimer_timeout"]
[connection signal="timeout" from="HpTimer" to="." method="_on_HpTimer_timeout"]
